--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     </header>
     <section class="secao__apresentacao">
        <div class="secao__apresentacao-divisao">
-            <p class="secao__apresentacao-texto">Sobre nós</p>
+            <span class="secao__apresentacao-texto">Sobre nós</span>
             <h1 class="secao__apresentacao-titulo">Por que somos diferentes?</h1>
-            <p class="secao__apresentacao-paragrafo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</p>
+            <span class="secao__apresentacao-paragrafo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</span>
        </div> 
     </section>
 </body>
