Seção de métricas 3/7

--- a/index.html
+++ b/index.html
@@ -34,5 +34,29 @@
             <span class="secao__apresentacao-paragrafo">Nós focamos nos detalhes de tudo que fazemos. Tudo para ajudar as empresas de todo o mundo a se concentrarem naquilo que é realmente importante para elas.</span>
        </div> 
     </section>
+    <section class="numeros">
+        <div class="numeros-divisao">
+            <div class="numeros-divisao-numero">
+                <h2 class="numeros-divisao-numero-titulo">400+</h2>
+                <p class="numeros-divisao-numero-titulo-paragrafo">Projetos concluídos</p>
+                <span class="numeros-divisao-numero-paragrafo">Nós ajudamos a costruir mais de 400 projetos incríveis</span>
+            </div>
+            <div class="numeros-divisao-numero">
+                <h2 class="numeros-divisao-numero-titulo">100+</h2>
+                <p class="numeros-divisao-numero-titulo-paragrafo">Colaboradores</p>
+                <span class="numeros-divisao-numero-paragrafo">Temos mais de 100 colaboradores no nosso time que se preocupam com nossos clientes</span>
+            </div>
+            <div class="numeros-divisao-numero">
+                <h2 class="numeros-divisao-numero-titulo">20k</h2>
+                <p class="numeros-divisao-numero-titulo-paragrafo">Downloads</p>
+                <span class="numeros-divisao-numero-paragrafo">Nossos projetos que estão disponíveis em lojas já foram baixados mais de 20.000 vezes</span>
+            </div>
+            <div class="numeros-divisao-numero">
+                <h2 class="numeros-divisao-numero-titulo">500+</h2>
+                <p class="numeros-divisao-numero-titulo-paragrafo">Reviews 5 estrelas</p>
+                <span class="numeros-divisao-numero-paragrafo">Estamos orgulhosos de contar mais de 500 reviews 5 estrelas em nossos produtos</span>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
