Seção com imagem 4/7

--- a/index.html
+++ b/index.html
@@ -58,5 +58,83 @@
             </div>
         </div>
     </section>
+
+<!---->
+    <section class="procurandoTalentos">
+
+        <div class="procurandoTalentos-divisao">
+            <div class="procurandoTalentos-divisao-divisao">
+                <p class="procurandoTalentos-paragrafo-decorado">Vagas abertas!</p>
+                <h2 class="procurandoTalentos-titulo">Estamos procurando por talentos</h2>
+                <span class="procurandoTalentos-paragrafo">Somos uma equipe 100% remota com pessoas do Brasil inteiro.</span>
+            </div>
+            <img src="img/timeDaOptimusTech.svg" alt="Time da OptimusTech em seu expediente">
+        </div>
+<!--FOCO-->
+        <div class="vagas-abertas">
+            <div class="vagas-abertas-secao"> <!--vagas-secao-salario-->
+                <div class="vagas-abertas-secao-container"> <!--vagas-secao-salario-divisao-->
+                    <p class="vagas-abertas-secao-container-titulo">Design</p> <!--vagas-secao-salario-area-->
+                    <div class="vagas-abertas-secao-container-itens">
+                        <div class="vagas-abertas-secao-container-item">
+                            <p class="vagas-abertas-secao-container-item-cargo">Product Designer</p>
+                            <div class="vagas-abertas-p-cinza-divisao">
+                                <p class="vagas-abertas-p-cinza">Full-time</p>
+                                <p class="vagas-abertas-p-cinza">Faixa Salarial: R$7.000</p>
+                            </div>
+                        </div>
+                        <div class="vagas-abertas-secao-container-item">
+                            <p class="vagas-abertas-secao-container-item-cargo">UX Desinger</p>
+                            <div>
+                                <div class="vagas-abertas-p-cinza-divisao">
+                                    <p class="vagas-abertas-p-cinza">Full-time</p>
+                                    <p class="vagas-abertas-p-cinza">Faixa salarial: R$6.000</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="vagas-abertas2"> <!--vagas-secao-salario-->
+                <div class="vagas-abertas-secao"> <!--vagas-secao-salario-->
+                    <div class="vagas-abertas-secao-container"> <!--vagas-secao-salario-divisao-->
+                        <p class="vagas-abertas-secao-container-titulo">Desenvolvimento de Software</p> <!--vagas-secao-salario-area-->
+                        <div class="vagas-abertas-secao-container-itens">
+                            <div class="vagas-abertas-secao-container-item">
+                                <p class="vagas-abertas-secao-container-item-cargo">Desenvolvedor(a) iOS</p>
+                                <div class="vagas-abertas-p-cinza-divisao">
+                                    <p class="vagas-abertas-p-cinza">Full-time</p>
+                                    <p class="vagas-abertas-p-cinza">Faixa Salarial: R$8.000</p>
+                                </div>
+                            </div>
+                            <div class="vagas-abertas-secao-container-item">
+                                <p class="vagas-abertas-secao-container-item-cargo">Desenvolvedor(a) Front-end</p>
+                                <div>
+                                    <div class="vagas-abertas-p-cinza-divisao">
+                                        <p class="vagas-abertas-p-cinza">Full-time</p>
+                                        <p class="vagas-abertas-p-cinza">Faixa salarial: R$7.000</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="vagas-abertas-secao-container-item">
+                                <p class="vagas-abertas-secao-container-item-cargo">Desenvolvedor(a) Back-end</p>
+                                <div>
+                                    <div class="vagas-abertas-p-cinza-divisao">
+                                        <p class="vagas-abertas-p-cinza">Full-time</p>
+                                        <p class="vagas-abertas-p-cinza">Faixa salarial: R$6.000</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>    
+
+        </div>
+
+    </section>
+<!---->
+
 </body>
 </html>
