Secão com imagem 5/7

--- a/index.html
+++ b/index.html
@@ -95,7 +95,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="vagas-abertas2"> <!--vagas-secao-salario-->
                 <div class="vagas-abertas-secao"> <!--vagas-secao-salario-->
                     <div class="vagas-abertas-secao-container"> <!--vagas-secao-salario-divisao-->
@@ -130,11 +129,21 @@
                     </div>
                 </div>
             </div>    
-
         </div>
-
     </section>
 <!---->
-
+    <section class="depoimentos">
+        <div class="depoimentos-container">
+            <div class="depoimentos-container-conteudo">
+                <div class="depoimentos-container-conteudo-parte">
+                    <p class="depoimentos-conteudo-p-vermelho">Veja o que nossos colaboradores falam sobre nós</p>
+                    <h2 class="depoimentos-conteudo-titulo">OptimusTech se importa com a saúde dos seus colaboradores e sempre procura nos dar todo tipo de auxílio possível.</h2>
+                    <img src="img/mulherTrabalhando.svg" alt="Júlia Castro trabalhando">
+                    <p class="desenvolvedora-julia">Júlia Castro</p>
+                    <p class="desenvolvedora-web">Desenvolvedora Web</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
