Seção com imagem 6/7

--- a/index.html
+++ b/index.html
@@ -145,5 +145,16 @@
             </div>
         </div>
     </section>
+    <section class="formulario-secao">
+        <div class="formulario-secao-container">
+            <h2 class="formulario-secao-titulo">Acompanhe as nossas oportunidades</h2>
+            <p class="formulario-secao-p">Seja o primeiro a saber quando novas vagas serão abertas!</p>
+            <div class="formulario-email">
+                <input type="email" placeholder="Seu e-mail" class="email">
+                <button class="formulario-botao">Cadastrar</button>
+            </div>
+            <p class="direitos-autorais">© 2022 OptimusTech. Todos os direitos reservados.</p>
+        </div>
+    </section>
 </body>
 </html>
